--- a/Sources/App/Modules/Blog/Templates/Frontend/Categories.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Categories.html
@@ -3,7 +3,7 @@
     "description": $vars["categories.page.description"]
 ])
 #define(body):
-<div id="categories" class="wrapper w m-l">
+<div id="categories" class="wrapper w m-xl">
     <header class="m:b:l center">
         <h1>#(head.title)</h1>
         <p>#(head.description)</p>
