--- a/Sources/App/Modules/Blog/Templates/Frontend/Posts.html
+++ b/Sources/App/Modules/Blog/Templates/Frontend/Posts.html
@@ -3,7 +3,7 @@
     "description": $vars["posts.page.description"]
 ])
 #define(body):
-<div id="posts" class="wrapper w:full m:l">
+<div id="posts" class="wrapper w:full m:xl">
 
     <header class="m:b:l center">
         <h1>#(head.title)</h1>
